--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-combine-reducers": "^1.1.1",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "regenerator-runtime": "^0.13.7",
     "unstated-next": "^1.1.0",
     "uuid": "^8.3.2",
     "web-vitals": "^1.0.1",
